--- a/package.json
+++ b/package.json
@@ -1,35 +1,36 @@
-﻿{
-	"name": "object-observer",
-	"version": "0.0.1",
-	"homepage": "https://github.com/gullerya/object-observer-js/README.md",
-	"author": {
-		"name": "Guller Yuri",
-		"email": "gullerya@gmail.com"
-	},
-	"description": "Object observer utility providing simple means to (deeply) observe specified object/array changes; implemented via Proxy, delivering changes in a synchronous way",
-	"main": "src/object-observer.js",
-	"keywords": [
-		"object",
-		"array",
-		"observe",
-		"observer",
-		"changes",
-		"deep",
-		"tree",
-		"graph",
-		"javascript",
-		"proxy"
-	],
-	"license": "MIT",
-	"files": [
-		"src/object-observer.js"
-	],
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/gullerya/object-observer-js"
-	},
-	"bugs": {
-		"url": "https://github.com/gullerya/data-tier/issues",
-		"email": "gullerya@gmail.com"
-	}
+{
+  "name": "object-observer",
+  "version": "0.0.2",
+  "homepage": "https://github.com/gullerya/object-observer-js/README.md",
+  "author": {
+    "name": "Guller Yuri",
+    "email": "gullerya@gmail.com"
+  },
+  "description": "Object observer utility provides simple means to (deeply) observe specified object/array changes; implemented via Proxy; changes delivered in a synchronous way",
+  "main": "src/object-observer.js",
+  "keywords": [
+    "object",
+    "array",
+    "observe",
+    "observer",
+    "observable",
+    "changes",
+    "deep",
+    "tree",
+    "graph",
+    "javascript",
+    "proxy"
+  ],
+  "license": "MIT",
+  "files": [
+    "src/object-observer.js"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gullerya/object-observer-js"
+  },
+  "bugs": {
+    "url": "https://github.com/gullerya/data-tier/issues",
+    "email": "gullerya@gmail.com"
+  }
 }
