--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "main": "src/object-observer.js",
   "devDependencies": {
     "grunt": "~0.4.5",
+    "grunt-cli": "~1.2.0",
     "grunt-contrib-jshint": "~1.0.0",
     "grunt-contrib-uglify": "~1.0.1"
   },
