--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "email": "gullerya@gmail.com"
   },
   "description": "Object observer utility provides simple means to (deeply) observe specified object/array changes; implemented via Proxy; changes delivered in a synchronous way",
-  "main": "src/object-observer.js",
+  "main": "dist/object-observer.js",
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-cli": "~1.2.0",
@@ -29,7 +29,8 @@
   ],
   "license": "MIT",
   "files": [
-    "bin/object-observer.js"
+    "dist/object-observer.js",
+    "dist/object-observer.min.js"
   ],
   "scripts": {
     "test": "grunt test"
