fixing tests and adding eslint

--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   "description": "Object observer utility provides simple means to (deeply) observe specified object/array changes; implemented via Proxy; changes delivered in a synchronous way",
   "main": "dist/object-observer.js",
   "devDependencies": {
-    "karma": "~0.13.0",
     "grunt": "~0.4.5",
     "grunt-cli": "~1.2.0",
+    "grunt-contrib-uglify": "^2.0.0",
     "grunt-karma": "~2.0.0",
-    "grunt-contrib-jshint": "~1.0.0",
-    "grunt-contrib-uglify": "^2.0.0"
+    "babel-eslint": "6.1.2",
+    "eslint-plugin-react": "6.1.2",
+    "gruntify-eslint": "^3.1.0",
+    "karma": "~0.13.0"
   },
   "keywords": [
     "object",
