--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "object-observer",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "homepage": "https://github.com/gullerya/object-observer-js/README.md",
   "author": {
     "name": "Guller Yuri",
@@ -9,14 +9,14 @@
   "description": "Object observer utility provides simple means to (deeply) observe specified object/array changes; implemented via Proxy; changes delivered in a synchronous way",
   "main": "dist/object-observer.js",
   "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-cli": "~1.2.0",
+    "grunt": "^1.0.1",
+    "grunt-cli": "^1.2.0",
     "grunt-contrib-uglify": "^2.0.0",
     "grunt-karma": "~2.0.0",
-    "babel-eslint": "6.1.2",
-    "eslint-plugin-react": "6.1.2",
+    "babel-eslint": "^7.1.1",
+    "eslint-plugin-react": "^6.9.0",
     "gruntify-eslint": "^3.1.0",
-    "karma": "~0.13.0"
+    "karma": "^1.4.0"
   },
   "keywords": [
     "object",
