tech: bumping the version to the next to released one (0.2.4 -> 0.2.5)

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "object-observer",
-  "version": "0.2.5",
+  "version": "0.2.6-snapshot",
   "homepage": "https://github.com/gullerya/object-observer-js/README.md",
   "author": {
     "name": "Guller Yuri",
