tech: improving the packaging / building layout

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,14 @@ language: node_js
 node_js:
 - "8"
 
+before_install:
+- cd build
+install:
+- npm install
+
 script:
-- npm run ./build/eslint
+- npm run eslint
+
+cache:
+  directories:
+  - "build/node_modules"
