--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "array",
     "observe",
     "observer",
+    "object observe",
+    "object.observe",
     "observable",
     "changes",
     "deep",
