--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   ],
   "homepage": "https://github.com/gullerya/object-observer",
   "bugs": {
-    "url": "https://github.com/gullerya/object-observer-js/issues",
+    "url": "https://github.com/gullerya/object-observer/issues",
     "email": "gullerya@gmail.com"
   },
   "license": "MIT",
@@ -33,14 +33,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gullerya/object-observer-js"
+    "url": "https://github.com/gullerya/object-observer"
   },
   "scripts": {
     "eslint": "eslint -c ./build/.eslintrc.json ./src/**/*.js",
     "build": "node ./build/tools/build-dist.js"
   },
   "devDependencies": {
-    "eslint": "^5.5.0",
+    "eslint": "^5.6.0",
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-promise": "^4.0.1",
@@ -48,7 +48,6 @@
     "eslint-config-standard": "^12.0.0",
     "fs-extra": "^7.0.0",
     "uglify-es": "^3.3.9",
-    "just-test": "^0.1.0",
-    "puppeteer": "^1.8.0"
+    "just-test": "^0.1.0"
   }
 }
