--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "object-observer",
-  "version": "1.1.1-snapshot",
+  "version": "1.1.1",
   "description": "Object observer utility provides simple means to (deeply) observe specified object/array changes; implemented via native Proxy; changes delivered in a synchronous way",
   "keywords": [
     "object",
