--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "object-observer",
-  "version": "1.1.3-snapshot",
-  "description": "Object observer utility provides simple means to (deeply) observe specified object/array changes; implemented via native Proxy; changes delivered in a synchronous way",
+  "version": "1.1.4-snapshot",
+  "description": "object-observer utility provides simple means to (deeply) observe specified object/array changes; implemented via native Proxy; changes delivered in a synchronous way",
   "keywords": [
     "object",
     "array",
