--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,12 @@ node_js:
 
 install:
 - npm install
+- npm install -g codecov
 
 script:
 - npm run eslint
 - npm run tests
+- codecov
 
 cache:
   directories:
