--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,11 @@ node_js:
 
 install:
 - npm install
-- npm install -g codecov
 
 script:
 - npm run eslint
 - npm run tests
-- codecov
+- ./node_modules/.bin/codecov
 
 cache:
   directories:
