--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "fs-extra": "^7.0.1",
     "uglify-es": "^3.3.9",
     "just-test": "^0.1.0",
-    "puppeteer": "^1.10.0"
+    "puppeteer": "^1.10.0",
+    "codecov": "^3.1.0"
   }
 }
