--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "object-observer",
-  "version": "1.1.5-snapshot",
+  "version": "1.1.5",
   "description": "object-observer utility provides simple means to (deeply) observe specified object/array changes; implemented via native Proxy; changes delivered in a synchronous way",
   "keywords": [
     "object",
