--- a/package.json
+++ b/package.json
@@ -37,21 +37,21 @@
   },
   "scripts": {
     "eslint": "eslint -c ./build/.eslintrc.json ./src/**/*.js",
-    "tests": "node ./tests/tmp-tests-runner/run-tests.js",
-    "build": "node ./build/tools/build-dist.js"
+    "build": "node ./build/tools/build-dist.js",
+    "test": "node ./tests/tmp-tests-runner/run-tests.js"
   },
   "devDependencies": {
-    "npm": "^6.4.1",
-    "eslint": "^5.9.0",
-    "eslint-plugin-node": "^8.0.0",
-    "eslint-plugin-import": "^2.14.0",
+    "npm": "^6.7.0",
+    "eslint": "^5.12.1",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-import": "^2.15.0",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-config-standard": "^12.0.0",
     "fs-extra": "^7.0.1",
     "uglify-es": "^3.3.9",
     "just-test": "^0.1.0",
-    "puppeteer": "^1.10.0",
+    "puppeteer": "^1.11.0",
     "codecov": "^3.1.0"
   }
 }
