--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "object-observer",
-  "version": "2.4.0-snapshot",
+  "version": "2.4.0",
   "description": "object-observer utility provides simple means to (deeply) observe specified object/array changes; implemented via native Proxy; changes delivered in a synchronous way",
   "keywords": [
     "object",
@@ -27,6 +27,7 @@
     "dist"
   ],
   "main": "dist/node-module/object-observer.min.js",
+  "type": "module",
   "author": {
     "name": "Guller Yuri",
     "email": "gullerya@gmail.com"
@@ -41,17 +42,17 @@
     "test": "node ./tests/tmp-tests-runner/run-tests.js"
   },
   "devDependencies": {
-    "eslint": "6.2.1",
-    "eslint-config-standard": "^14.0.0",
+    "eslint": "^6.5.1",
+    "eslint-config-standard": "^14.1.0",
     "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "fs-extra": "^8.1.0",
     "just-test": "^0.1.0",
-    "npm": "^6.10.3",
-    "puppeteer": "^1.19.0",
+    "npm": "^6.11.3",
+    "puppeteer": "^1.20.0",
     "uglify-es": "^3.3.9",
-    "codecov": "^3.5.0"
+    "codecov": "^3.6.1"
   }
 }
