--- a/package.json
+++ b/package.json
@@ -39,20 +39,18 @@
   "scripts": {
     "eslint": "eslint -c ./build/.eslintrc.json ./src/**/*.js",
     "build": "node ./build/tools/build-dist.js",
-    "test": "node ./tests/tmp-tests-runner/run-tests.js"
+    "test": "node ./node_modules/just-test/dist/tests-runner/run-tests.js --config=./tests/jt-runner-config.json"
   },
   "devDependencies": {
-    "eslint": "^6.5.1",
+    "eslint": "^6.6.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "fs-extra": "^8.1.0",
-    "just-test": "^0.1.0",
-    "npm": "^6.11.3",
-    "puppeteer": "^1.20.0",
-    "uglify-es": "^3.3.9",
-    "codecov": "^3.6.1"
+    "just-test": "^1.6.0",
+    "npm": "^6.12.0",
+    "uglify-es": "^3.3.9"
   }
 }
