--- a/package.json
+++ b/package.json
@@ -40,17 +40,17 @@
   "scripts": {
     "eslint": "eslint -c ./build/.eslintrc.json ./src/**/*.js",
     "build": "node ./build/tools/build-dist.js",
-    "test": "node ./node_modules/just-test/dist/tests-runner/run-tests.js --config=./tests/jt-runner-config.json"
+    "test": "node ./node_modules/just-test/dist/tests-runner/run-tests.js --config=./tests/tests-runner-config.json"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-node": "^11.0.0",
     "fs-extra": "^8.1.0",
-    "just-test": "^2.1.3",
+    "just-test": "^2.3.0",
     "uglify-es": "^3.3.9"
   }
 }
