--- a/.github/workflows/build_tmp.yml
+++ b/.github/workflows/build_tmp.yml
@@ -21,5 +21,6 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+    - run: npm install
     - run: npm run eslint
     - run: npm run test
