--- a/.github/workflows/build_tmp.yml
+++ b/.github/workflows/build_tmp.yml
@@ -24,3 +24,8 @@ jobs:
     - run: npm install
     - run: npm run eslint
     - run: npm run test
+    - name: Upload coverage to Codecov
+	  uses: codecov/codecov-action@v1
+      with:
+        file: ./coverage.xml
+        name: codecov-umbrella
