--- a/.github/workflows/build_tmp.yml
+++ b/.github/workflows/build_tmp.yml
@@ -17,15 +17,16 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Build & Test with Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm install
-    - run: npm run eslint
-    - run: npm run test
+    - run: |
+        npm install
+        npm run eslint
+        npm run test
     - name: Upload coverage to Codecov
-	  uses: codecov/codecov-action@v1
+      uses: codecov/codecov-action@v1
       with:
         file: ./coverage.xml
         name: codecov-umbrella
