--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: node_js
 node_js:
-- "12"
+- "14"
 
 install:
 - npm install
 
 script:
-- npm run eslint
+- npm run lint
 - npm run test
 - bash <(curl -s https://codecov.io/bash)
 
