--- a/ci/.eslintrc.json
+++ b/ci/.eslintrc.json
@@ -1,21 +1,14 @@
 {
+	"extends": "eslint:recommended",
 	"env": {
-		"browser": true
+		"browser": true,
+		"es2017": true
 	},
 	"parserOptions": {
 		"ecmaVersion": 8,
 		"sourceType": "module"
 	},
 	"rules": {
-		"indent": [
-			2,
-			"tab"
-		],
-		"no-tabs": 0,
-		"semi": "off",
-		"space-before-function-paren": "off",
-		"eol-last": "off",
-		"one-var": "off",
-		"no-prototype-builtins": "off"
+		"no-prototype-builtins": 0
 	}
 }
