slightly changing CI scripts

--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -18,9 +18,8 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 14
-          registry-url: 'https://registry.npmjs.org'
 
-      - name: Install dependencies
+      - name: Install
         run: npm install
 
       - name: Build
