--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 		"eslint": "^7.13.0",
 		"fs-extra": "^9.0.1",
 		"just-test": "2.3.2",
+		"puppeteer": "^5.5.0",
 		"uglify-es": "^3.3.9"
 	}
 }
