issue #70: fixing the CI script

--- a/.github/workflows/release-prepare.yml
+++ b/.github/workflows/release-prepare.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Bump release version
         run: |
           npm run bump -- --release
-          echo "RELEASE_VERSION=$(cat package.json | jq '.version')" >> $GITHUB_ENV
+          echo "RELEASE_VERSION=$(cat package.json | jq -r '.version')" >> $GITHUB_ENV
 
       # Build & Verify new version
       - name: Build
