fixing the auth token handling

--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -27,12 +27,9 @@ jobs:
         run: npm run build
 
       - name: Publish
-        run: |
-          echo registry=https://registry.npmjs.org/ > .npmrc
-          echo //registry.npmjs.org/:_authToken=${NPM_AUTH_TOKEN} >> .npmrc
-          npm publish
+        run: npm publish
         env:
-          NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
 
       # Bump version to next snapshot
       - name: Bump snapshot version
