adding script to handle the version change to snapshot

--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -39,6 +39,7 @@ jobs:
       - name: Bump snapshot version
         run: |
           npm run bump -- --version=patch --snapshot
+          npm install
           echo "SNAPSHOT_VERSION=$(cat package.json | jq -r '.version')" >> $GITHUB_ENV
 
       - name: Push changes
