--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 		"url": "https://github.com/gullerya/object-observer/issues",
 		"email": "gullerya@gmail.com"
 	},
-	"license": "MIT",
+	"license": "ISC",
 	"files": [
 		"dist"
 	],
@@ -52,10 +52,10 @@
 		"bump": "node ./ci/tools/version-utils.js"
 	},
 	"devDependencies": {
-		"eslint": "^7.17.0",
-		"fs-extra": "^9.0.1",
+		"eslint": "^7.22.0",
+		"fs-extra": "^9.1.0",
 		"just-test": "2.3.2",
-		"puppeteer": "^5.5.0",
+		"puppeteer": "^8.0.0",
 		"uglify-es": "^3.3.9"
 	}
 }
