--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -14,6 +14,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - run: env
+
       - name: Setup NodeJS 14
         uses: actions/setup-node@v2
         with:
