--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
 		"url": "https://github.com/gullerya/object-observer"
 	},
 	"scripts": {
-		"build": "node ./ci/tools/build-dist.js",
+		"build": "node ./ci/tools/build-utils.js",
 		"lint": "eslint -c ./ci/.eslintrc.json ./src/*.js ./tests/*.js ./ci/**/*.js",
 		"test": "node ./node_modules/just-test/dist/tests-runner/run-tests.js --config=./tests/tests-runner-config.json",
 		"bump": "node ./ci/tools/version-utils.js"
