--- a/.github/workflows/release-deploy.yml
+++ b/.github/workflows/release-deploy.yml
@@ -1,9 +1,8 @@
 name: Deploy 'object-observer' to CDN
 
 on:
-  push:
-    tags:
-      - deploy
+  repository_dispatch:
+    types: [deploy]
 
 jobs:
   release-deploy:
@@ -15,28 +14,21 @@ jobs:
         with:
           token: ${{ secrets.OO_CI_AT }}
 
-      - name: Delete temporary trigger tag
-        run: git push origin --delete deploy
-
       - name: Setup NodeJS 14
         uses: actions/setup-node@v2
         with:
           node-version: 14
 
-      - name: Install
-        run: npm install
-
       # Get release version
       - name: Get release version
-        run: echo "RELEASE_VERSION=$(cat package.json | jq -r '.version')" >> $GITHUB_ENV
+        run: echo "RELEASE_VERSION=${{ github.event.client_payload.version }}" >> $GITHUB_ENV
 
-      # Build
-      - name: Build
-        run: npm run build
+      - name: Install
+        run: npm install -E object-observer@${{ env.RELEASE_VERSION }}
 
       # Deploy
       - name: Deploy
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_S3_ACCESS }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_S3_SECRET }}
-        run: aws s3 sync ./dist s3://${{ secrets.AWS_LIBS_BUCKET }}/object-observer/${{ env.RELEASE_VERSION }} --delete --cache-control public,max-age=172800,immutable
+        run: aws s3 sync ./node_modules/object-observer/dist/cdn s3://${{ secrets.AWS_LIBS_BUCKET }}/object-observer/${{ env.RELEASE_VERSION }} --delete --cache-control public,max-age=172800,immutable
