chore(integrity): Issue 81 add integrity (#83)
* issue #81: added docs

* issue #81: added docs

* issue #81: added docs

* wip

* wip

* issue #81: adding integrity

* issue #81: adding integrity

* issue #81: adding integrity

--- a/package.json
+++ b/package.json
@@ -46,13 +46,13 @@
 		"url": "https://github.com/gullerya/object-observer"
 	},
 	"scripts": {
-		"build": "node ./ci/tools/build-dist.js",
+		"build": "node ./ci/tools/build-utils.js",
 		"lint": "eslint -c ./ci/.eslintrc.json ./src/*.js ./tests/*.js ./ci/**/*.js",
 		"test": "node ./node_modules/just-test/dist/tests-runner/run-tests.js --config=./tests/tests-runner-config.json",
 		"bump": "node ./ci/tools/version-utils.js"
 	},
 	"devDependencies": {
-		"eslint": "^7.24.0",
+		"eslint": "^7.25.0",
 		"fs-extra": "^9.1.0",
 		"just-test": "2.3.2",
 		"puppeteer": "^9.0.0",
