--- a/package.json
+++ b/package.json
@@ -52,10 +52,10 @@
 		"bump": "node ./ci/tools/version-utils.js"
 	},
 	"devDependencies": {
-		"eslint": "^7.32.0",
+		"eslint": "^8.2.0",
 		"fs-extra": "^10.0.0",
 		"just-test": "2.3.2",
-		"puppeteer": "^10.2.0",
-		"uglify-es": "^3.3.9"
+		"puppeteer": "^11.0.0",
+		"uglify-js": "^3.14.3"
 	}
 }
