--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   release:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
 
     steps:
       - name: Checkout
@@ -19,7 +19,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 14
-          registry-url: 'https://registry.npmjs.org'
+          registry-url: "https://registry.npmjs.org"
 
       # Prepare
       - name: Install NPM
@@ -43,19 +43,3 @@ jobs:
           workflow: Deploy to CDN
           token: ${{ secrets.OO_CI_AT }}
           inputs: '{ "version": "${{ env.RELEASE_VERSION }}" }'
-
-      # Bump version to next snapshot
-      - name: Bump snapshot version
-        run: |
-          npm run bump -- --version=patch --snapshot
-          npm install
-          echo "SNAPSHOT_VERSION=$(cat package.json | jq -r '.version')" >> $GITHUB_ENV
-
-      - name: Push changes
-        run: |
-          git fetch
-          git config user.email "gullerya@gmail.com"
-          git config user.name "CI automation"
-          git add --all
-          git commit -m "set version to ${{ env.SNAPSHOT_VERSION }}"
-          git push origin HEAD:main
