--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "object-observer",
-	"version": "4.6.1-snapshot",
+	"version": "4.6.0",
 	"description": "object-observer utility provides simple means to (deeply) observe specified object/array changes; implemented via native Proxy; changes delivered in a synchronous way",
 	"keywords": [
 		"object",
@@ -48,14 +48,13 @@
 	"scripts": {
 		"build": "node ./ci/tools/build-utils.js",
 		"lint": "eslint -c ./ci/.eslintrc.json ./src/*.js ./tests/*.js ./ci/**/*.js",
-		"test": "node ./node_modules/just-test/dist/tests-runner/run-tests.js --config=./tests/tests-runner-config.json",
-		"bump": "node ./ci/tools/version-utils.js"
+		"test": "node ./node_modules/just-test/dist/tests-runner/run-tests.js --config=./tests/tests-runner-config.json"
 	},
 	"devDependencies": {
-		"eslint": "^8.2.0",
+		"eslint": "^8.4.1",
 		"fs-extra": "^10.0.0",
 		"just-test": "2.3.2",
-		"puppeteer": "^11.0.0",
-		"uglify-js": "^3.14.3"
+		"puppeteer": "^13.0.0",
+		"uglify-js": "^3.14.5"
 	}
 }
