--- a/.github/workflows/trigger-release.yml
+++ b/.github/workflows/trigger-release.yml
@@ -24,8 +24,7 @@ jobs:
         with:
           node-version: 14
 
-      # Bump / tag version
-      - name: Bump to target version, if any
+      - name: Bump & Tag version
         run: |
           git config user.name "automation"
           npm version ${{ github.event.inputs.version }}
