--- a/.github/workflows/release-trigger.yml
+++ b/.github/workflows/release-trigger.yml
@@ -10,7 +10,7 @@ on:
         options: ["patch", "minor", "major"]
 
 jobs:
-  prepare-verify-trigger:
+  trigger:
     runs-on: ubuntu-20.04
 
     steps:
@@ -27,4 +27,5 @@ jobs:
       - name: Bump & Tag version
         run: |
           git config user.name "automation"
+          git config user.email "gullerya@gmail.com"
           npm version ${{ github.event.inputs.version }}
