--- a/.github/workflows/release-trigger.yml
+++ b/.github/workflows/release-trigger.yml
@@ -29,3 +29,5 @@ jobs:
           git config user.name "automation"
           git config user.email "gullerya@gmail.com"
           npm version ${{ github.event.inputs.version }}
+          git push
+          git push --tags
