--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -26,7 +26,10 @@ jobs:
         run: npm install
 
       - name: Build
-        run: npm run build -- --cdn
+        run: |
+          npm run build -- --cdn
+          git config user.name "automation"
+          git push
 
       # Publish to NPM
       - name: Publish
